# Cairn

./: .gitignore  LICENSE  README.md  program.md  pyproject.toml
docs/specs/: 2026-04-18-design.md
docs/superpowers/plans/: 2026-04-18-core-implementation.md
examples/toy-sort/: README.md  experiment.yaml  main.py
src/cairn/: cli.py  consolidate.py  daemon.py  rpc.py  util.py  wiki.py  worker.py
src/new/: budget.py  cli.py  consolidate.py  daemon.py  metric.py  schema.py  store.py  util.py  wiki.py  worker.py
tests/: conftest.py  test_baseline.py  test_budget.py  test_cli.py  test_consolidate.py  test_e2e.py  test_holdout.py  test_metric.py  test_rpc.py  test_schema.py  test_shell_safety.py  test_smoke.py  test_store.py  test_util.py  test_wiki.py  test_worker.py
